fix sidebar spacing

--- a/raw/scss/_circle.scss
+++ b/raw/scss/_circle.scss
@@ -26,8 +26,12 @@
 
   .main-right {
     p {
-      margin: 0.3em 0;
+      margin: .5em 0;
     }
+  }
+
+  .benefits-header {
+    margin-top: 2em;
   }
 
   .tagline {
